Add more ui pages
