# apps/sps-validator-ui/src/app/services/openapi/index.ts
@@ -9,6 +9,7 @@ export type { OpenAPIConfig } from './core/OpenAPI';
 
 export type { Balance } from './models/Balance';
 export type { Balances } from './models/Balances';
+export type { BalancesCount } from './models/BalancesCount';
 export type { NoPriceAtPoint } from './models/NoPriceAtPoint';
 export type { PoolSettings } from './models/PoolSettings';
 export type { PriceAtPoint } from './models/PriceAtPoint';
